--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 		<meta name="Description" content="Benjamin Orozco Resume CV - benoror.github.io - benoror@gmail.com" />
 		<meta name="Keywords"    content="Benjamin Orozco Resume CV - benoror.github.io - benoror@gmail.com" />
 		<link rel="shortcut icon" href="favicon.ico" />
-		<link rel="apple-touch-icon-precomposed" href="apple-touch-icon.png" />
-		<link type="text/css" href="style.css" rel="stylesheet" media="all" />
+		<link type="text/css" href="_layout/base.css" rel="stylesheet" media="all" />
+		<link type="text/css" href="_layout/grid.css" rel="stylesheet" media="all" />
+		<link type="text/css" href="_layout/layout.css" rel="stylesheet" media="all" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css' />
 	</head>
 	<body>
-		<!-- <div class="resize"><img src="_content/resize.png" alt="" /></div> -->
 		<div class="wrap">
 			<div class="content">
 				<div class="row">
