--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<meta name="Description" content="Benjamin Orozco Resume CV - benoror.github.io - benoror@gmail.com" />
 		<meta name="Keywords"    content="Benjamin Orozco Resume CV - benoror.github.io - benoror@gmail.com" />
 		<link rel="shortcut icon" href="favicon.ico" />
-		<link type="text/css" href="_layout/base.css" rel="stylesheet" media="all" />
-		<link type="text/css" href="_layout/grid.css" rel="stylesheet" media="all" />
-		<link type="text/css" href="_layout/layout.css" rel="stylesheet" media="all" />
+		<link type="text/css" href="base.css" rel="stylesheet" media="all" />
+		<link type="text/css" href="grid.css" rel="stylesheet" media="all" />
+		<link type="text/css" href="layout.css" rel="stylesheet" media="all" />
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,700' rel='stylesheet' type='text/css' />
 	</head>
 	<body>
