--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
 				<div class="row">
 					<div class="span4 cv-item-description">
-						<h6>C_TERP_10_65</h6>
+						<h6>C_TERP10_65</h6>
 						<p>
 							SAP Education<br/>
 							<span class="mute">03.2014</span>
