Fix Certs Titles

--- a/index.html
+++ b/index.html
@@ -244,28 +244,45 @@
 						<h6>C_TERP10_65</h6>
 						<p>
 							SAP Education<br/>
-							<span class="mute">03.2014</span>
+							<span class="mute">2014</span>
 						</p>
 					</div>
 					<div class="span8 cv-item-details">
-						<h4>Integrated Business Processes with SAP ERP</h4>
+						<h4>SAP Certified Business Associate with SAP ERP 6.0</h4>
 						<p>
-							SAP Certified Business Associate with SAP ERP 6.0 <br />
+							Integrated Business Processes with SAP ERP<br />
 							By University of Duisburg-Essen
 						</p>
 					</div>
+				</div>
+				<!--<div class="row">
+					<div class="span4 cv-item-description">
+						<h6>SUITE_HANA</h6>
+						<p>
+							OpenSAP<br/>
+							<span class="mute">2014</span>
+						</p>
+					</div>
+					<div class="span8 cv-item-details">
+						<h4>SAP Business Suite powered by SAP HANA</h4>
+						<p>
+							(pending) <br/>
+							By Experts from Lines of Business, Industries, and SAP HANA Services
+						</p>
+					</div>-->
 				</div>
 				<div class="row">
 					<div class="span4 cv-item-description">
 						<h6>HANA_DEV</h6>
 						<p>
 							OpenSAP<br/>
-							<span class="mute">12.2013</span>
+							<span class="mute">2013</span>
 						</p>
 					</div>
 					<div class="span8 cv-item-details">
-						<h4>Introduction to Software Development on SAP HANA</h4>
+						<h4>SAP HANA Software Development</h4>
 						<p>
+							Introduction to Software Development on SAP HANA<br />
 							By Thomas Jung, Product Manager for SAP HANA
 						</p>
 					</div>
@@ -275,12 +292,13 @@
 						<h6>HANA_CLOUD</h6>
 						<p>
 							OpenSAP<br/>
-							<span class="mute">11.2013</span>
+							<span class="mute">2013</span>
 						</p>
 					</div>
 					<div class="span8 cv-item-details">
-						<h4>Introduction to SAP HANA Cloud Platform</h4>
+						<h4>SAP HANA Cloud Platform</h4>
 						<p>
+							Introduction to SAP HANA Cloud Platform<br />
 							By Rui Nogueira, Product Manager for SAP HANA Cloud Platform
 						</p>
 					</div>
@@ -290,12 +308,15 @@
 						<h6>INMEMORY_DB</h6>
 						<p>
 							OpenHPI<br/>
-							<span class="mute">10.2013</span>
+							<span class="mute">2013</span>
 						</p>
 					</div>
 					<div class="span8 cv-item-details">
 						<h4>In-Memory Database Management</h4>
-						<p>By Prof. Dr. h.c. mult. Hasso Plattner, Hasso Plattner Institut</p>
+						<p>
+							Introduction to In-Memory Databases<br />
+							By Prof. Dr. h.c. mult. Hasso Plattner, Hasso Plattner Institut
+						</p>
 					</div>
 				</div>
 				
