--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
 
 				<div class="hr text-center">
 					<br/>
-					<span class="mute">cv.benoror.com</span>
+					<a href="http://cv.benoror.com">cv.benoror.com</a>
 				</div>
 
 			</div>
