Logo Subtitle Change

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 			<div class="content">
 				<div class="row">
 					<div class="span6">
-						<h1 class="logo"> Benjamin Orozco <br /> <small>BS Computer Science, SAP Certified <em>&amp;</em> <br /> MBA International Business Consultant</small> </h1>
+						<h1 class="logo"> Benjamin Orozco </h1>
+						<h1 class="logo"> <small>BS Computer Science and Technology<br /> MBA International Business Consulting</small> </h1>
 					</div>
 					<div class="span4">
 						<ul class="contact-info hide-on-phone fixed">
