--- a/index.html
+++ b/index.html
@@ -520,10 +520,10 @@
 				
 				<div class="row">
 					<div class="span4 cv-item-description">
-						<h6>Management Skills</h6>
+						<h6>Personal Skills</h6>
 					</div>
 					<div class="span8">
-						<span>Teamwork skills with people from diverse cultural backgrounds. Negotiation, project assessment, strict schedule deadlines</span>
+						<span>Negotiation. Project assessment. Multicultural teamwork. Autodidact. Self-organized. Work under strict schedule deadlines</span>
 					</div>
 				</div>
 				<div class="row">
@@ -533,9 +533,9 @@
 					<div class="span8">
 						<span>
 							<ul class="circle">
-								<li><strong>Reading</strong> (science, tech, classics, science fiction and biographies)</li>
-								<li><strong>Films & Music</strong> (classic films, rock and piano music)</li>
-								<li><strong>Sports</strong> (motorsports, jogging)</li>
+								<li>Reading (science, tech, classics, science fiction and biographies)</li>
+								<li>Films & Music (classic films, rock and piano music)</li>
+								<li>Sports (motorsports, jogging)</li>
 							</ul>
 						</span>
 					</div>
