download as pdf link

--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
 					</div>
 					<div class="span8">
 						<span>
-							<ul class="circle">
+							<ul class="unstyled">
 								<li>Reading (science, tech, classics, science fiction and biographies)</li>
 								<li>Films & Music (classic films, rock and piano music)</li>
 								<li>Sports (motorsports, jogging)</li>
@@ -544,6 +544,7 @@
 				<div class="hr text-center">
 					<br/>
 					<a href="http://cv.benoror.com">cv.benoror.com</a>
+					<span class="hide-print"> - <a href="http://benoror.github.io/Resume_Benjamin_Orozco.pdf">download as pdf</a></span>
 				</div>
 
 			</div>
