--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
 				<div class="hr text-center">
 					<br/>
 					<a href="http://cv.benoror.com">cv.benoror.com</a>
-					<span class="hide-print"> - <a href="http://benoror.github.io/Resume_Benjamin_Orozco.pdf">download as pdf</a></span>
+					<span class="hide-print"> - <a href="http://cv.benoror.com/Resume_Benjamin_Orozco.pdf">download as pdf</a></span>
 				</div>
 
 			</div>
