--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-		<meta name="Description" content="Benjamin Orozco Resume CV - benoror.github.io - benoror@gmail.com" />
-		<meta name="Keywords"    content="Benjamin Orozco Resume CV - benoror.github.io - benoror@gmail.com" />
+		<meta name="Description" content="Benjamin Orozco Resume CV - cv.benoror.com - benoror@gmail.com" />
+		<meta name="Keywords"    content="Benjamin Orozco Resume CV - cv.benoror.com - benoror@gmail.com" />
 		<title>Benjamin Orozco</title>
 		<link rel="shortcut icon" href="favicon.ico" />
 		<link type="text/css" href="base.css" rel="stylesheet" media="all" />
