extended proj. desc.

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
 						<h6>HANA Supportability - 2014</h6>
 					</div>
 					<div class="span8">
-						<span>Server-side application to provide web services, persistence and data analysis capabilities for reporting incidents, logs and exceptions of HANA applications. Developed in Javascript and SAP HANA in-memory column-based database using a test-driven approach</span>
+						<span>Server-side application to provide web services, persistence and data analysis capabilities for reporting incidents, logs and exceptions of HANA applications such as SAP Business Transparency app for Apple® iPad®. Developed in Javascript and SAP HANA in-memory column-based database using a test-driven approach</span>
 					</div>
 				</div>
 
