--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 							<li><span class="icon icon-map-marker"></span>Paseo Campestre 101, 78151 SLP</li>
 							<li><span class="icon icon-bullhorn"></span>+52 444 1135407</li>
 							<li><span class="icon icon-envelope"></span><a href="mailto:benoror@gmail.com">benoror@gmail.com</a></li>
-							<li><span class="icon icon-globe"></span><a href="benoror.com">benoror.com</a></li>
-							<li><span class="icon icon-user"></span><a href="linkedin.com/in/benoror">linkedin.com/in/benoror</a></li>
+							<li><span class="icon icon-globe"></span><a href="http://www.benoror.com">www.benoror.com</a></li>
+							<li><span class="icon icon-user"></span><a href="http://linkedin.com/in/benoror">linkedin.com/in/benoror</a></li>
 						</ul>
 					</div>
 					<div class="span2">
