Google Apps setup

--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
 						<h6>procevi.com - 2011</h6>
 					</div>
 					<div class="span8">
-						<span>Real estate advertising website</span>
+						<span>Real estate advertising website and Google Apps setup</span>
 					</div>
 				</div>
 
