--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
 
 				<div class="row">
 					<div class="span4 cv-item-description">
-						<h6>Master Thesis, 2014</h6>
+						<h6>Master Thesis - 2014</h6>
 					</div>
 					<div class="span8">
 						<span>"Design & Implementation of a Balanced Scorecard in SAP BO Design Studio & SAP HANA"</span>
@@ -385,7 +385,7 @@
 				</div>
 				<div class="row">
 					<div class="span4 cv-item-description">
-						<h6>Award, 2010</h6>
+						<h6>Award - 2010</h6>
 					</div>
 					<div class="span8">
 						<span>INPOJUVE Government Entrepreneurship Contest</span>
@@ -393,7 +393,7 @@
 				</div>
 				<div class="row">
 					<div class="span4 cv-item-description">
-						<h6>Expositor, 2009</h6>
+						<h6>Expositor - 2009</h6>
 					</div>
 					<div class="span8">
 						<span>ITESM Entrepreneurship Forum</span>
@@ -401,7 +401,7 @@
 				</div>
 				<div class="row">
 					<div class="span4 cv-item-description">
-						<h6>Coordinator, 2009</h6>
+						<h6>Coordinator - 2009</h6>
 					</div>
 					<div class="span8">
 						<span>SISCTI Computer Science Symposium Registration System</span>
@@ -409,7 +409,7 @@
 				</div>
 				<div class="row">
 					<div class="span4 cv-item-description">
-						<h6>Participation, 2006</h6>
+						<h6>Participation - 2006</h6>
 					</div>
 					<div class="span8">
 						<span>ACM Programming Contest</span>
@@ -417,10 +417,10 @@
 				</div>
 				<div class="row">
 					<div class="span4 cv-item-description">
-						<h6>Articles, 2005-2006</h6>
+						<h6>Articles - 2005</h6>
 					</div>
 					<div class="span8">
-						<span>"Basic Linux Assembler I: Syscalls" & "Basic Linux Assembler II: Shellcodes", ContHackto Magazine</span>
+						<span>"Linux Assembler I: Syscalls" & "Linux Assembler II: Shellcodes", ContHackto Magazine</span>
 					</div>
 				</div>
 				
