--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="row">
 					<div class="span6">
 						<h1 class="logo"> <a href="http://cv.benoror.com">Benjamin Orozco</a> </h1>
-						<h1 class="logo"> <small>BS Computer Science and Technology<br /> MBA International Business Consulting</small> </h1>
+						<h1 class="logo"> <small>MBA International Business Consulting<br />BS Computer Science and Technology</small> </h1>
 					</div>
 					<div class="span4">
 						<ul class="contact-info hide-on-phone fixed">
