--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<div class="content">
 				<div class="row">
 					<div class="span6">
-						<h1 class="logo"> <a href="http://cv.benoror.com">Benjamin Orozco</a> </h1>
+						<h1 class="logo"> <a href="http://cv.benoror.com">Benjamin Orozco Rios</a> </h1>
 						<h1 class="logo"> <small>MBA International Business Consulting<br />BS Computer Science and Technology</small> </h1>
 					</div>
 					<div class="span4">
