remove biz suite

--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
 						<h4>SAP Certified Business Associate with SAP ERP 6.0</h4>
 					</div>
 				</div>
-				<div class="row">
+				<!--<div class="row">
 					<div class="span4 cv-item-description">
 						<h6>SUITE_HANA</h6>
 					</div>
 					<div class="span8 cv-item-details">
 						<h4>SAP Business Suite powered by SAP HANA</h4>
 					</div>
-				</div>
+				</div>-->
 				<div class="row">
 					<div class="span4 cv-item-description">
 						<h6>HANA_DEV</h6>
