--- a/index_servicesinit.html
+++ b/index_servicesinit.html
@@ -175,14 +175,14 @@
 						<h4>SAP Certified Business Associate with SAP ERP 6.0</h4>
 					</div>
 				</div>
-				<div class="row">
+				<!--<div class="row">
 					<div class="span4 cv-item-description">
 						<h6>SUITE_HANA</h6>
 					</div>
 					<div class="span8 cv-item-details">
 						<h4>SAP Business Suite powered by SAP HANA</h4>
 					</div>
-				</div>
+				</div>-->
 				<div class="row">
 					<div class="span4 cv-item-description">
 						<h6>HANA_DEV</h6>
@@ -474,7 +474,7 @@
 						<h6>tickets_pension - 2010</h6>
 					</div>
 					<div class="span8">
-						<span>Parking management and CCTV system developed in VB.net</span>
+						<span>Parking management and CCTV system developed in VB.net and MS Access</span>
 					</div>
 				</div>
 
@@ -501,7 +501,7 @@
 						<h6>factura_salk - 2006</h6>
 					</div>
 					<div class="span8">
-						<span>Gas station invoicing system developed in Visual Basic</span>
+						<span>Gas station invoicing system developed in Visual Basic and MS Access</span>
 					</div>
 				</div>
 
