--- a/index.html
+++ b/index.html
@@ -535,6 +535,7 @@
 							<ul class="unstyled">
 								<li>Reading (science, tech, classics, science fiction and biographies)</li>
 								<li>Films & Music (classic films, rock and piano music)</li>
+								<li>Board Games (chess, checkers)</li>
 								<li>Sports (motorsports, jogging)</li>
 							</ul>
 						</span>
