--- a/index_servicesinit.html
+++ b/index_servicesinit.html
@@ -27,6 +27,7 @@
 						<ul class="contact-info hide-on-phone fixed">
 							<li><span class="icon icon-map-marker"></span>Parque de Innovación y Transferencia Tecnológica ITESM. Carretera SLP - Guadalajara 1510. 78211 SLP</li>
 							<li><span class="icon icon-bullhorn"></span>+52 444 168 1214</li>
+							<li><span class="icon icon-envelope"></span><a href="mailto:benoror@gmail.com">benjamin.orozco@servicesinit.com</a></li>
 							<li><span class="icon icon-globe"></span><a href="http://www.servicesinit.com/">www.servicesinit.com</a></li>
 						</ul>
 					</div>
