--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<meta name="Description" content="Benjamin Orozco Resume / CV - cv.benoror.com - benoror@gmail.com - BS Computer Science and Technology - MBA International Business Consulting" />
 		<meta name="Keywords"    content="Benjamin Orozco Resume / CV - cv.benoror.com - benoror@gmail.com - BS Computer Science and Technology - MBA International Business Consulting" />
-		<title>Benjamin Orozco</title>
+		<title>Benjamin Orozco Rios</title>
 		<link rel="shortcut icon" href="favicon.ico" />
 		<link type="text/css" href="base.css" rel="stylesheet" media="all" />
 		<link type="text/css" href="grid.css" rel="stylesheet" media="all" />
