--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 					</div>
 					<div class="span4">
 						<ul class="contact-info hide-on-phone fixed">
-							<li><span class="icon icon-map-marker"></span>Paseo Campestre 101, 78151 SLP</li>
-							<li><span class="icon icon-bullhorn"></span>+52 444 1135407</li>
-							<li><span class="icon icon-envelope"></span><a href="mailto:benoror@gmail.com">benoror@gmail.com</a></li>
-							<li><span class="icon icon-globe"></span><a href="http://www.benoror.com">www.benoror.com</a></li>
-							<li><span class="icon icon-user"></span><a href="http://linkedin.com/in/benoror">linkedin.com/in/benoror</a></li>
+                                                  <!--<li><span class="icon icon-map-marker"></span>Paseo Campestre 101, 78151 SLP, MX</li>-->
+                                                  <li><span class="icon icon-bullhorn"></span><a href="tel:+52-444-113-5407">+52 (444) 113 5407</a></li>
+                                                  <li><span class="icon icon-envelope"></span><a href="mailto:benoror@gmail.com">benoror@gmail.com</a></li>
+                                                  <li><span class="icon icon-globe"></span><a href="http://www.benoror.com">www.benoror.com</a></li>
+                                                  <li><span class="icon icon-user"></span><a href="http://linkedin.com/in/benoror">linkedin.com/in/benoror</a></li>
 						</ul>
 					</div>
 					<div class="span2">
@@ -246,8 +246,8 @@
 			</div>
 		</div>
 		
-		
 		<div class="wrap">
+
 			<div class="content">
 				
 				<!-- 
