minor title changes

--- a/index.html
+++ b/index.html
@@ -61,12 +61,11 @@
 						<h6>PanaxIT/Habi, San Luis Potosi, MX</h6>
 						<p>
 							<span class="mute">09.2014 - Present</span><br/>
-							<span class="mute"><a href="http://panax.io/">panax.io</a></span> /
-							<span class="mute"><a href="http://habi.com.mx/">habi.com.mx</a></span>
+							<span class="mute"><a href="http://panax.io/">www.panax.io</a></span>
 						</p>
 					</div>
 					<div class="span8 cv-item-details">
-						<h4>Technical Co-Founder, ERP Development</h4>
+						<h4>ERP Development</h4>
 						<p>Full-stack web development for a ERP-creation tool called Panax
 						<br />Development of in-house ERP for construction company</p>
 					</div>
@@ -107,14 +106,14 @@
 
 				<div class="row">
 					<div class="span4 cv-item-description">
-						<h6>PROCEVI SA de CV, SLP, MX</h6>
+						<h6>Procevi SA de CV, SLP, MX</h6>
 						<p>
 							<span class="mute">01.2010 - 09.2012</span><br/>
 							<span class="mute"><a href="http://www.procevi.com/">www.procevi.com</a></span>
 						</p>
 					</div>
 					<div class="span8 cv-item-details">
-						<h4>Project Manager</h4>
+						<h4>Co-founder</h4>
 						<p>Construction project management and supervision, supply chain, controlling, mortgages counseling, marketing and sales campaigns, website maintenance</p>
 					</div>
 				</div>
@@ -624,8 +623,8 @@
 				<!-- <div class="hr text-center"> -->
 				<div class="text-center">
 					<!-- <br/> -->
-					<a href="http://cv.benoror.com">cv.benoror.com</a>
-					<span class="hide-print"> - <a href="http://cv.benoror.com/Resume_Benjamin_Orozco.pdf">download as pdf</a></span>
+					<a href="http://resume.benoror.com/">resume.benoror.com</a>
+					<span class="hide-print"> - <a href="http://resume.benoror.com/Resume_Benjamin_Orozco.pdf">Download as PDF</a></span>
 				</div>
 
 			</div>
