--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
               <!--<li><span class="icon icon-bullhorn"></span><a href="tel:+52-444-113-5407">+52 (444) 113 5407</a></li>-->
               <li><span class="icon icon-envelope"></span><a href="mailto:benoror@gmail.com">benoror@gmail.com</a></li>
               <li><span class="icon icon-globe"></span><a href="http://www.benoror.com">benoror.com</a></li>
+              <li><span class="icon icon-home"></span><a href="http://blog.benoror.com">blog.benoror.com</a></li>
               <!-- <li><span class="icon icon-facetime-video"></span><a href="skype:benoror86">benoror86</a></li> -->
               <li><span class="icon icon-heart"></span><a href="https://github.com/benoror">github.com/benoror</a></li>
               <li><span class="icon icon-bookmark"></span><a href="http://linkedin.com/in/benoror">linkedin.com/in/benoror</a></li>
