--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					</div>
 					<div class="span8 cv-item-details">
 						<h4>Co-Founder &mdash; Procevi</h4>
-						<p>Construction project management and supervision, supply chain, controlling, mortgages counseling, marketing and sales campaigns, website maintenance</p>
+						<p>ERP development, digital marketing, construction project management, supply chain, controlling, mortgages counseling</p>
 					</div>
 				</div>
 
@@ -484,6 +484,17 @@
 
 				<div class="row">
 					<div class="span4 cv-item-description">
+						<h6>procevi.com - 2011 - 2016</h6>
+					</div>
+					<div class="span8">
+                                          <span>ERP for financial & project management<br/></span>
+                                          <span>Real estate advertising website and Google Apps setup<br/></span>
+                                          <span>Landing pages for housing & development projects<br/></span>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="span4 cv-item-description">
 						<h6>Panax UI - 2015</h6>
 					</div>
 					<div class="span8">
@@ -497,15 +508,6 @@
 					</div>
 					<div class="span8">
 						<span>Server-side application to provide web services, persistence and data analysis capabilities for reporting incidents, logs and exceptions of HANA applications such as SAP Business Transparency app for Apple® iPad®. Developed in Javascript and SAP HANA in-memory column-based database using a test-driven approach</span>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="span4 cv-item-description">
-						<h6>procevi.com - 2011</h6>
-					</div>
-					<div class="span8">
-						<span>Real estate advertising website and Google Apps setup</span>
 					</div>
 				</div>
 
