Update: CTO role

--- a/index.html
+++ b/index.html
@@ -59,10 +59,26 @@
 
         <div class="row">
           <div class="span4 cv-item-description">
+            <h6><a href="http://www.ecaresoft.com/">www.ecaresoft.com</a></h6>
+            <p>
+              <span class="mute">Monterrey, MX</span><br/>
+              <span class="mute">Feb 2018 - Present</span><br/>
+            </p>
+          </div>
+          <div class="span8 cv-item-details">
+            <h4>CTO &mdash; Ecaresoft Inc.</h4>
+            <p>
+              Work closely with the other members of the management team and lead technology strategy, software development and software operations (SaaS) and managing infrastructure
+            </p>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="span4 cv-item-description">
             <h6><a href="http://www.nimbo-x.com/">www.nimbo-x.com</a></h6>
             <p>
               <span class="mute">Monterrey, MX</span><br/>
-              <span class="mute">Feb 2016 - Present</span><br/>
+              <span class="mute">Feb 2016 - Feb 2018</span><br/>
             </p>
           </div>
           <div class="span8 cv-item-details">
