--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-		<meta name="Description" content="Benjamin Orozco Resume / CV - cv.benoror.com - benoror@gmail.com - BS Computer Science and Technology - MBA International Business Consulting" />
-		<meta name="Keywords"    content="Benjamin Orozco Resume / CV - cv.benoror.com - benoror@gmail.com - BS Computer Science and Technology - MBA International Business Consulting" />
-		<title>Benjamin Orozco Rios</title>
+		<meta name="Description" content="Ben Orozco Resume / CV - cv.benoror.com - benoror@gmail.com - BS Computer Science and Technology - MBA International Business Consulting" />
+		<meta name="Keywords"    content="Ben Orozco Resume / CV - cv.benoror.com - benoror@gmail.com - BS Computer Science and Technology - MBA International Business Consulting" />
+		<title>Ben Orozco</title>
 		<link rel="shortcut icon" href="favicon.ico" />
 		<link type="text/css" href="base.css" rel="stylesheet" media="all" />
 		<link type="text/css" href="grid.css" rel="stylesheet" media="all" />
@@ -17,7 +17,7 @@
 			<div class="content">
 				<div class="row">
 					<div class="span6">
-						<h1 class="logo"> <a href="http://cv.benoror.com">Benjamin Orozco Rios</a> </h1>
+						<h1 class="logo"> <a href="http://cv.benoror.com">Ben Orozco</a> </h1>
 						<h1 class="logo"> <small>BS Computer Science and Technology<br />MBA International Business Consulting</small> </h1>
 					</div>
 					<div class="span4">
@@ -35,7 +35,7 @@
 						</ul>
 					</div>
 					<div class="span2">
-						<img class="self-picture" src="Foto_CV_medium_BlueTie.jpg" alt="self-picture" />
+						<!-- <img class="self-picture" src="Foto_CV_medium_BlueTie.jpg" alt="self-picture" /> -->
 					</div>
 				</div>
 				<!-- <div class="row">
@@ -157,20 +157,6 @@
 
 				<div class="row">
 					<div class="span4 cv-item-description">
-						<h6><a href="http://www.procevi.com/">www.procevi.com</a></h6>
-						<p>
-              <span class="mute">San Luis Potosi, MX</span><br/>
-							<span class="mute">Jan 2010 - Present</span><br/>
-						</p>
-					</div>
-					<div class="span8 cv-item-details">
-						<h4>Co-Founder &mdash; Procevi</h4>
-						<p>ERP development, digital marketing, construction project management, supply chain, controlling, mortgages counseling</p>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="span4 cv-item-description">
 						<h6><a href="http://www.cotizahoy.com/">www.cotizahoy.com</a></h6>
 						<p>
               <span class="mute">San Luis Potosi, MX</span><br/>
@@ -180,6 +166,20 @@
 					<div class="span8 cv-item-details">
 						<h4>Technical Co-Founder &mdash; CotizaHoy</h4>
 						<p>Startup providing a B2B quotation platform for the local industries, mainly steel & car manufacturing. Developed on RubyOnRails, MySQL database, Heroku cloud</p>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="span4 cv-item-description">
+						<h6><a href="http://www.procevi.com/">www.procevi.com</a></h6>
+						<p>
+              <span class="mute">San Luis Potosi, MX</span><br/>
+							<span class="mute">Jan 2010 - Present</span><br/>
+						</p>
+					</div>
+					<div class="span8 cv-item-details">
+						<h4>Co-Founder &mdash; Procevi</h4>
+						<p>ERP development, digital marketing, construction project management, supply chain, controlling, mortgages counseling</p>
 					</div>
 				</div>
 
@@ -667,9 +667,9 @@
 					<div class="span8">
 						<span>
 							<ul class="unstyled">
-								<li>Arts: Reading, Films &amp; Music</li>
-								<li>Games: Video Games, Chess</li>
-								<li>Sports: Motorsports, Jogging</li>
+								<li>Technology, Entrepreneurship, Stoicism</li>
+								<li>Arts: Video Games, Reading, Films &amp; Music</li>
+								<li>Sports: Padel, Motorsports, Jogging</li>
 							</ul>
 						</span>
 					</div>
