--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 		<div class="wrap">
 			<div class="content">
 				<div class="row">
-					<div class="span6">
-						<h1 class="logo"> <a href="http://cv.benoror.com">Ben Orozco</a> </h1>
-						<h1 class="logo"> <small>BS Computer Science and Technology<br />MBA International Business Consulting</small> </h1>
+					<div class="span7">
+						<h2 class="logo"> <a href="http://cv.benoror.com">Ben Orozco</a> </h2>
+						<h5 class="logo">CTO - Software Architect - Full Stack Web Developer</h5>
+						<h5 class="logo">MBA International Business Consulting </h5>
+						<h5 class="logo">BS Computer Science and Technology</h5>
 					</div>
-					<div class="span4">
+					<div class="span3">
 						<ul class="contact-info hide-on-phone fixed">
               <!--<li><span class="icon icon-map-marker"></span>Paseo Campestre 101, 78151 SLP, MX</li>-->
               <!--<li><span class="icon icon-bullhorn"></span><a href="tel:+52-444-113-5407">+52 (444) 113 5407</a></li>-->
-              <li><span class="icon icon-envelope"></span><a href="mailto:benoror@gmail.com">benoror@gmail.com</a></li>
+              <li><span class="icon icon-envelope"></span><a href="mailto:benoror+cv@gmail.com">benoror+cv@gmail.com</a></li>
               <li><span class="icon icon-globe"></span><a href="http://www.benoror.com">benoror.com</a></li>
               <li><span class="icon icon-home"></span><a href="http://blog.benoror.com">blog.benoror.com</a></li>
               <!-- <li><span class="icon icon-facetime-video"></span><a href="skype:benoror86">benoror86</a></li> -->
