Ref: AR MP feedback

--- a/index.html
+++ b/index.html
@@ -70,9 +70,12 @@
           <div class="span9 cv-item-details">
             <h4>Chief Technology Officer</h4>
             <details open>
-              <summary>Work closely with members of the executive team, lead technology strategy, software development and SaaS operations</summary>
+              <summary>
+                Work closely with members of the executive team, lead technology strategy, software development and SaaS operations.
+                Merger of all product lines under a single Engineering organization culture: <a href="https://www.getcirrus.com/en">Cirrus</a>, <a href="https://www.nimbo-x.com/au">Nimbo</a> & <a href="https://www.usenebula.com/en/">Nebula</a>
+              </summary>
               <p>
-                Managment of engineering 2-pizza teams
+                Managment of engineering 2-pizza teams:
                 <ul>
                   <li>Implement Agile software development methodologies to prioritize the roadmap and measure optimal performance</li>
                   <li>Mentor, coach, and lead team members to achieve their personal best</li>
@@ -80,7 +83,7 @@
                   <li>Recruit and retain top talent in a competitive market</li>
                   <li>Establish an engineering culture with clear career growth opportunities, responsibility and accountability</li>
                 </ul>
-                Definition of technology strategy and software architecture
+                Definition of technology strategy and software architecture:
                 <ul>
                   <li>Achieve internationalization by splitting legacy Java monolith into several APIs, microservices and serverless functions (lambdas) in a variety of languages and frameworks: Java, Javascript, Elixir / Phoenix, Ruby on Rails</li>
                   <li>Define cloud SaaS architecture for high availability and resilience</li>
