--- a/index.html
+++ b/index.html
@@ -66,16 +66,19 @@
               <span class="mute">Monterrey, MX</span><br/>
               <span class="mute">Feb 2018 - Present</span><br/>
             </p>
+            <a href="https://www.getcirrus.com/en">Cirrus</a>,
+            <a href="https://www.usenebula.com/">Nebula</a>,
+            <a href="http://www.nimbo-x.com/">Nimbo</a>
           </div>
           <div class="span9 cv-item-details">
-            <h4>Chief Technology Officer</h4>
+            <h4>Chief Technology Officer (CTO)</h4>
             <details open>
               <summary>
                 Work closely with members of the executive team, lead technology strategy, software development and SaaS operations.
-                Merger of all product lines under a single Engineering organization culture: <a href="https://www.getcirrus.com/en">Cirrus</a>, <a href="https://www.nimbo-x.com/au">Nimbo</a> & <a href="https://www.usenebula.com/en/">Nebula</a>
+                Merger of all product lines under a single Engineering organization culture.
               </summary>
               <p>
-                Managment of engineering 2-pizza teams:
+                Managment of engineering teams:
                 <ul>
                   <li>Implement Agile software development methodologies to prioritize the roadmap and measure optimal performance</li>
                   <li>Mentor, coach, and lead team members to achieve their personal best</li>
@@ -98,9 +101,8 @@
 
         <div class="row">
           <div class="span3 cv-item-description">
-            <h6><a href="https://www.usenebula.com/">Nebula</a></h6>
+            <a href="https://www.usenebula.com/">Nebula</a><br/>
             <p>
-              <span class="mute">Monterrey, MX</span><br/>
               <span class="mute">Oct 2017 - Jul 2018</span><br/>
             </p>
           </div>
@@ -121,14 +123,13 @@
 
         <div class="row">
           <div class="span3 cv-item-description">
-            <h6><a href="http://www.nimbo-x.com/">Nimbo</a></h6>
+            <a href="http://www.nimbo-x.com/">Nimbo</a>
             <p>
-              <span class="mute">Monterrey, MX</span><br/>
               <span class="mute">Feb 2016 - Feb 2018</span><br/>
             </p>
           </div>
           <div class="span9 cv-item-details">
-            <h4>Chief Technology Officer</h4>
+            <h4>Chief Technology Officer (CTO)</h4>
             <details>
               <summary>SaaS product development of EHR (electronic health record) web application focused in providing the best user experience for the LatAm market</summary>
               <p>
@@ -277,7 +278,7 @@
 					<div class="span3 cv-item-description">
 						<h6>Hochschule Offenburg</h6>
 						<p>
-							<span class="mute">10.2012 - 02.2014</span>
+							<span class="mute">Oct 2012 - Feb 2014</span>
 						</p>
 					</div>
 					<div class="span9 cv-item-details">
@@ -289,7 +290,7 @@
 					<div class="span3 cv-item-description">
 						<h6>ITESM Monterrey</h6>
 						<p>
-							<span class="mute">08.2005 - 12.2009</span>
+							<span class="mute">Aug 2005 - Dec 2009</span>
 						</p>
 					</div>
 					<div class="span9 cv-item-details">
