--- a/index.html
+++ b/index.html
@@ -630,7 +630,8 @@
             <h6><a href="http://fiets.mx/">FIETS Expo</a> - 2018</h6>
 					</div>
 					<div class="span9">
-            <span><a href="https://youtu.be/OJasOQlvGYs">The impact of the Software evolution in Healthcare</a></span>
+            <a href="https://docs.google.com/presentation/d/1FXGuXHmGeYZS_PDIT9KlvQVDfr6AhLkifOqBvlaoXw8/edit?usp=sharing">The impact of the Software evolution in Healthcare</a>
+            (<a href="https://youtu.be/OJasOQlvGYs">Video</a>)
 					</div>
 				</div>
 				<div class="row">
@@ -638,7 +639,8 @@
 						<h6>ECS Hack Week - 2018</h6>
 					</div>
 					<div class="span9">
-            <span><a href="https://youtu.be/YoYJ6-mudtk">Building decentralized apps with Blockstack</a></span>
+            <a href="https://docs.google.com/presentation/d/1y3mQibLNdGeQsAWcNJAYusNreznbPwYd0Tk7lnudY94/edit?usp=sharing">Building decentralized apps with Blockstack</a>
+            (<a href="https://youtu.be/YoYJ6-mudtk">Video</a>)
 					</div>
 				</div>
 				<div class="row">
@@ -646,11 +648,24 @@
 						<h6>ECS Hack Week - 2017</h6>
 					</div>
 					<div class="span9">
-						<span>Workshop - Blockchains & Ethereum: Beyond Bitcoin</span>
-            <br />
-						<span>Workshop - GraphQL: R.I.P. REST?</span>
-            <br />
-						<span>Workshop - Progressive Web Apps: Let’s make apps great again</span>
+						<a href="https://slides.com/benoror/hw2017-blockchain">Blockchains & Ethereum: Beyond Bitcoin</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="span3 cv-item-description">
+            &nbsp;
+					</div>
+					<div class="span9">
+						<a href="https://slides.com/benoror/hw2017-graphql">GraphQL: R.I.P. REST?</a>
+					</div>
+				</div>
+				<div class="row">
+					<div class="span3 cv-item-description">
+						<h6>Ember Mty Meetup - 2016</h6>
+					</div>
+					<div class="span9">
+            <a href="https://slides.com/benoror/ember-data">Ember Data Overview</a>
+            (<a href="https://www.youtube.com/watch?v=gl45TXtd5wI">Video</a>)
 					</div>
 				</div>
 				<div class="row">
@@ -658,7 +673,8 @@
 						<h6>Master Thesis - 2014</h6>
 					</div>
 					<div class="span9">
-						<span>Design & Implementation of a Balanced Scorecard in SAP BO Design Studio & SAP HANA</span>
+						<a href="https://drive.google.com/file/d/0B3AnMIJ-uw0-anRrUW01VEFKWlU/view?usp=sharing">Design & Implementation of a Balanced Scorecard in SAP BO Design Studio & SAP HANA</a>
+						(<a href="https://drive.google.com/file/d/0B3AnMIJ-uw0-TG5wclVUSUVMNjA/view?usp=sharing">Master Thesis</a>)
 					</div>
 				</div>
 				<div class="row">
@@ -699,6 +715,11 @@
 					</div>
 					<div class="span9">
             <span><a href="https://github.com/benoror/conthackto/blob/master/Conthackto_Num1_PDF/8-9%20LINUX.pdf">Article: Linux Assembler I: Syscalls</a></span>
+					</div>
+				</div>
+				<div class="row">
+					<div class="span3 cv-item-description">
+            &nbsp;
 					</div>
 					<div class="span9">
             <span><a href="https://github.com/benoror/conthackto/blob/master/contHACKto%20No3%20Ene%202006%20-%20Creaci%C3%B3n%20de%20Shellcodes%20bajo%20Linux.pdf">Article: Linux Assembler II: Shellcodes</a></span>
